--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -3,3 +3,24 @@
     --md-primary-fg-color--light: teal;
     --md-primary-fg-color--dark:  teal;
   }
+
+  /*
+.md-grid {
+  max-width: 1440px; 
+}
+*/
+
+.md-sidebar {
+  align-self: flex-start;
+  flex-shrink: 0;
+  padding: 1.2rem 0;
+  position: sticky;
+  top: 2.4rem;
+  width: 13.1rem;
+}
+
+.my-owm-announcement {
+  text-align: center;
+  color: white;
+  font-size: .8rem;
+}
